# ndh

./: .gitignore  .mergify.yml  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGELOG.md  MANIFEST.in  Pipfile  README.md  manage.py  pyproject.toml  requirements.in  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: docker-hub.yml  lint.yml  release.yml  test.yml
docker/: nginx.conf
docs/: conf.py  generated_requirements.txt  index.md  release.md  release.py  release.sh  requirements.txt
docs/source/: conf.py  index.rst
locale/fr/LC_MESSAGES/: django.mo  django.po
ndh/: __init__.py  context_processors.py  forms.py  mail.py  mixins.py  models.py  querysets.py  tests.py  utils.py  widgets.py
ndh/locale/fr/LC_MESSAGES/: django.mo  django.po
ndh/static/css/: ndh.css
ndh/templates/: ndh.html
ndh/templates/ndh/: base_delete.html  base_form.html  delete.html  dt.html  form.html  formset.html  tables.html
ndh/templates/ndh/forms/widgets/: datalist.html
ndh/templates/registration/: activation_email.html  activation_email.txt  logged_out.html  login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html
ndh/templatetags/: __init__.py  ndh.py
testapp/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
testapp/locale/fr/LC_MESSAGES/: django.mo  django.po
testapp/migrations/: 0001_initial.py  0002_testmodellist.py  0003_testmodelpk.py  0004_tests_decimal.py  0005_remove_testmodel_year_in_school.py  0006_alter_testmodel_created_alter_testmodel_name_and_more.py  0007_testmodel_datalist.py
testapp/templates/: base.html
testapp/templates/auth/: user_detail.html
testapp/templates/testapp/: settings.html  testmodel.html  testmodel_confirm_delete.html  testmodel_detail.html  testmodel_list.html
testproject/: admin.py  forms.py  models.py  settings.py  tests.py  urls.py  views.py  wsgi.py
testproject/migrations/: 0001_initial.py
testproject/templates/: base.html
testproject/templates/testproject/: testmodel_detail.html
