[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[dependency-groups]
dev = [
  "coverage[toml]>=7.6.12",
  "ipython>=8.32.0",
  "myst-parser>=4.0.1",
  "pre-commit>=4.1.0",
  "ruff>=0.9.7",
  "sphinx>=8.1.3"
]

[project]
authors = [
  {email = "guilhem.saurel@laas.fr", name = "Guilhem Saurel"}
]
dependencies = [
  "django-autoslug>=1.9.9",
  "django-bootstrap5>=24.3"
]
description = "Nim's Django Helpers"
license = "BSD-2-Clause"
name = "ndh"
readme = "README.md"
requires-python = ">=3.10"
version = "6.10.0"

[project.urls]
Changelog = "https://github.com/nim65s/ndh/blob/master/CHANGELOG.md"
Documentation = "https://ndh.readthedocs.io/"
Homepage = "https://github.com/nim65s/ndh"
Repository = "https://github.com/nim65s/ndh.git"

[tool.coverage.run]
omit = ["*/apps.py", "*/migrations/*", "*/wsgi.py"]
source = ["ndh"]

[tool.ruff]
extend-exclude = ["migrations"]
target-version = "py310"

[tool.ruff.lint]
allowed-confusables = [" "]
extend-ignore = ["COM812", "D203", "D213", "RUF012"]
extend-select = ["A", "B", "C", "COM", "D", "DJ", "EM", "EXE", "G", "N", "PTH", "RET", "RUF", "UP", "W", "YTT"]

[tool.tomlsort]
all = true
